added ng content

--- a/button.component.html
+++ b/button.component.html
@@ -2,4 +2,6 @@
 	'_primary' : type == 'primary',
 	'_second' : type == 'second',
 	'_danger' : type == 'danger'
-}" class="w-btn">Add</button>
+}" class="w-btn">
+	<ng-content></ng-content>
+</button>
