--- a/button.component.scss
+++ b/button.component.scss
@@ -5,9 +5,9 @@
     background-color: var(--c-primary);
     border-radius: var(--b-radius);
     transition: var(--transition);
-    color: var(--c-white);
+    // color: var(--c-white);
 	position: relative;
-    padding: 11px 25px;
+    padding: 8px 15px;
 	line-height: 19px;
     text-align: center;
     white-space: nowrap;
@@ -27,7 +27,8 @@
     &._primary {
         background-color: var(--c-primary);
         &:hover {
-            background-color: var(--c-primary-hover);
+            // background-color: var(--c-primary-hover);
+            box-shadow: var(--c-long-shadow);
         }
     }
     &._second {
@@ -48,7 +49,7 @@
 		font-size: 14px;
 		font-weight: 400;
 		&:hover {
-			color: var(--c-text-secondary);
+			color: var(--c-primary);
 		}
 	}
     &:disabled {
