--- a/button.component.html
+++ b/button.component.html
@@ -1,14 +1,14 @@
 <button
 	[ngClass]="{
-		'_primary' : type === types.PRIMARY,
-		'_secondary' : type === types.SECONDARY,
-		'_success' : type === types.SUCCESS,
-		'_danger' : type === types.DANGER,
-		'_warning' : type === types.WARNING,
-		'_info' : type === types.INFO,
-		'_light' : type === types.LIGHT,
-		'_dark' : type === types.DARK,
-		'_link' : type === types.LINK
+		'_primary' : type === 'primary',
+		'_secondary' : type === 'secondary',
+		'_success' : type === 'success',
+		'_danger' : type === 'danger',
+		'_warning' : type === 'warning',
+		'_info' : type === 'info',
+		'_light' : type === 'light',
+		'_dark' : type === 'dark',
+		'_link' : type === 'link'
 	}"
 	[type]="click || disableSubmit ? 'button' : 'submit'"
 	[disabled]="disabled"
